# fullstack_deploy_template

./: .gitignore  README.md  render.yaml
api/: main.py  pyproject.toml
api/common/: auth.py  database.py  models.py  sanity_checks.py  settings.py
api/migrations/: env.py
api/migrations/versions/: 8d44f97b70a4_generating_new_starter_revision_after_.py
api/routes/: companies.py  doc_edit.py  login.py  main.py  misc.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css  box_list_styles.css  form_styles.css  main.css
frontend/src/common/: auth.ts  queries.ts  test_env.ts
frontend/src/components/: WelcomeMessage.vue
frontend/src/router/: index.ts
frontend/src/views/: CompaniesView.vue  DocEditView.vue  HomeView.vue  LoginView.vue  RegisterView.vue  UserProfileView.vue
