[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "psycopg2>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pycrdt>=0.14.1",
    "pycrdt-websocket>=0.16.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.39",
]
